# TH2DXP_KIT

./: dat_tool.py  scenario_eboot_tool.py  tpl_image_tool.py
dat_tool_rust/: Cargo.toml  README.md
dat_tool_rust/src/: main.rs
scenario_eboot_tool_rust/: Cargo.toml  README.md
scenario_eboot_tool_rust/src/: main.rs
