[package]
name = "dat_tool"
version = "0.1.0"
edition = "2021"
description = "Safe extractor/rebuilder for this game's data.dat-style archive"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
image = { version = "0.25", default-features = false, features = ["png"] }
lzma-rs = "0.3"
rayon = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tempfile = "3"
