[package]
name = "scenario_eboot_tool"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
encoding_rs = "0.8"
hex = "0.4"
lzma-sdk-rs = { version = "0.2301.0", features = ["decode"] }
rayon = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
sha2 = "0.10"
